# ltc_scrypt_go

./: .gitignore  CMakeLists.txt  README.md  build.sh  cgo_configure.go  cgo_darwin_arm64.go  cgo_darwin_x86_64.go  cgo_linux_arm64.go  cgo_linux_x86_64.go  cgo_windows_arm64.go  cgo_windows_x86_64.go  extend_funcs.go  git_tag.sh  go.mod  install_musl_openssl.sh  ltc_scrypt_go.go  ltc_scrypt_go_test.go  toolchain_darwin_arm64.cmake  toolchain_darwin_x86_64.cmake  toolchain_linux_arm64.cmake  toolchain_linux_x86_64.cmake  toolchain_windows_arm64.cmake  toolchain_windows_x86_64.cmake
.github/workflows/: build.yaml
config/: config.go
include/: scrypt.h
src/: scrypt.cpp
